gccida/c3/gen_peephole2_1164
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_peephole2_1164/src/insn-emit.c:14569:30: error: use of undeclared identifier 'machine_mode'
operands[4] = gen_rtx_REG( ( machine_mode)*( ( unsigned __int8 *)*operands + 2), 17); 
                             ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_peephole2_1164/src/obj/insn-emit.o] Error 1
